--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # application.properties file
 server.port=3000
-spring.datasource.url=jdbc:mysql://mysql:3306/bankingapp
+spring.datasource.url=jdbc:mysql://localhost:3306/bankingapp
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -30,3 +30,6 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 spring.resttemplate.connection-timeout=5000
 spring.resttemplate.read-timeout=5000
 
+# Spring Security
+# spring.security.user.name=user
+# spring.security.user.password=password
