--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # application.properties file
 server.port=3000
-spring.datasource.url=jdbc:mysql://localhost:3306/bankingapp
+spring.datasource.url=jdbc:mysql://mysql:3306/bankingapp
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -33,3 +33,12 @@ spring.resttemplate.read-timeout=5000
 # Spring Security
 # spring.security.user.name=user
 # spring.security.user.password=password
+
+# HikariCP configuration for retrying the MySQL connection
+# Wait indefinitely for the DB connection
+# spring.datasource.hikari.initializationFailTimeout=0
+# Retry every 30 seconds if no connection is available
+# spring.datasource.hikari.connectionTimeout=30000
+# Adjust to your application's needs
+# spring.datasource.hikari.maximumPoolSize=5
+
